{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 37,
  "lineage": "47585aea-5f79-8695-8f69-5da30f6b5c82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "deployment_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4e8f8a31de46cc2",
            "arn": "arn:aws:ec2:eu-north-1:241455051510:elastic-ip/eipalloc-0f4e8f8a31de46cc2",
            "association_id": "eipassoc-07cf63c22b61b8a4f",
            "domain": "vpc",
            "id": "eipalloc-0f4e8f8a31de46cc2",
            "instance": "i-05b4414bde7505c45",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-06c5e7fac9c4216ac",
            "private_dns": "ip-172-31-38-71.eu-north-1.compute.internal",
            "private_ip": "172.31.38.71",
            "public_dns": "ec2-13-61-234-232.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.234.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "buy01-deployment-eip"
            },
            "tags_all": {
              "Name": "buy01-deployment-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.deployment",
            "aws_security_group.deployment_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004cf710b781508a7",
            "arn": "arn:aws:ec2:eu-north-1:241455051510:elastic-ip/eipalloc-004cf710b781508a7",
            "association_id": "eipassoc-00fbae93962d405b7",
            "domain": "vpc",
            "id": "eipalloc-004cf710b781508a7",
            "instance": "i-05a3560029ab946ff",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0fed8d57d7bebc1f7",
            "private_dns": "ip-172-31-45-204.eu-north-1.compute.internal",
            "private_ip": "172.31.45.204",
            "public_dns": "ec2-13-62-141-159.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.141.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "buy01-jenkins-eip"
            },
            "tags_all": {
              "Name": "buy01-jenkins-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0683ee28af6610487",
            "arn": "arn:aws:ec2:eu-north-1:241455051510:instance/i-05b4414bde7505c45",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b4414bde7505c45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "lastreal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c5e7fac9c4216ac",
            "private_dns": "ip-172-31-38-71.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.71",
            "public_dns": "ec2-56-228-24-179.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.24.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014849e271881a6a3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "buy01-deployment-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aacada1d22133dff",
            "tags": {
              "Name": "buy01-deployment-server"
            },
            "tags_all": {
              "Name": "buy01-deployment-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f9cd11fdff63f57"
            ]
          },
          "dependencies": [
            "aws_security_group.deployment_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0683ee28af6610487",
            "arn": "arn:aws:ec2:eu-north-1:241455051510:instance/i-05a3560029ab946ff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a3560029ab946ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "lastreal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fed8d57d7bebc1f7",
            "private_dns": "ip-172-31-45-204.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.204",
            "public_dns": "ec2-13-60-36-235.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.36.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c07cfb5c3e5ed17",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "buy01-jenkins-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aacada1d22133dff",
            "tags": {
              "Name": "buy01-jenkins-server"
            },
            "tags_all": {
              "Name": "buy01-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df16375fa1c74186"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "deployment_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:241455051510:security-group/sg-05f9cd11fdff63f57",
            "description": "Security group for application deployment server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f9cd11fdff63f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Gateway",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Eureka",
                "from_port": 8761,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8761
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Media Service",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Product Service",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "User Service",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "buy01-deployment-sg",
            "name_prefix": "",
            "owner_id": "241455051510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "buy01-deployment-sg"
            },
            "tags_all": {
              "Name": "buy01-deployment-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f50cf004c8b71e1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:241455051510:security-group/sg-0df16375fa1c74186",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df16375fa1c74186",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "buy01-jenkins-sg",
            "name_prefix": "",
            "owner_id": "241455051510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "buy01-jenkins-sg"
            },
            "tags_all": {
              "Name": "buy01-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f50cf004c8b71e1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}